2003-05-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/rtems/types.h: Include stdint.h.

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 409:
	* include/rtems/rtems/types.h: Include rtems/stdint.h.
	Apply c99-types to typedef rtems_[un]signed[8|16|32|64].

2003-01-10	Joel Sherrill <joel@OARcorp.com>

	* src/msg.c, src/part.c, src/sem.c, src/tasks.c: Correct object
	class control structure initialization for multiprocessing
	configurations.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Don't create $ARCH as side-effect of compilation.
	Re-order all-local.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Remove.
	* inline/Makefile.am: Remove.
	* macros/Makefile.am: Remove.
	* src/Makefile.am: Remove.
	* Makefile.am: Merge-in removed Makefile.ams.

2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/rtems/support.h: Added casts to eliminate warnings
	on 16 bit targets like the h8300.

2002-11-13	Paul Whitfield <paulw@microsol.iinet.net.au>

	* src/regionreturnsegment.c: When RTEMS_REGION_SHRED_ON_FREE is
	set, there should have been an & in front of size.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* src/regiongetinfo.c: Corrected return value check.

2002-10-28	Joel Sherrill <joel@OARcorp.com>

	* src/timerserver.c: Add useless return to avoid warning.

2002-09-14	Joel Sherrill <joel@OARcorp.com>

	* src/dpmemcreate.c, src/dpmemident.c, src/msgqcreate.c,
	src/msgqident.c, src/partcreate.c, src/partident.c,
	src/ratemoncreate.c, src/ratemonident.c, src/regioncreate.c,
	src/regionident.c, src/semcreate.c, src/semident.c, src/taskcreate.c,
	src/taskident.c, src/timercreate.c, src/timerident.c: Added casts
	to Objects_Name to eliminate warnings.

2002-08-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Add librtems.a.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-05	Joel Sherrill <joel@OARcorp.com>
