@@ -155,7 +155,7 @@ void _Message_queue_MP_Send_object_was_deleted (
  */
 
 void _Message_queue_MP_Send_extract_proxy (
-  Thread_Control *the_thread
+  void           *argument
 );
 
 /*
