@@ -281,9 +281,11 @@ void _Semaphore_MP_Send_object_was_deleted (
  */
 
 void _Semaphore_MP_Send_extract_proxy (
-  Thread_Control *the_thread
+  void           *argument
 )
 {
+  Thread_Control *the_thread = (Thread_Control *)argument;
+
   _Semaphore_MP_Send_process_packet(
     SEMAPHORE_MP_EXTRACT_PROXY,
     the_thread->Wait.id,
